# WaveQ-api

./: .gitignore  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.mcp  README.md  README_MCP.md  README_SECURITY.md  README_START_MENU.md  api_gateway.py  asyncio_mqtt.py  audio_agent_api.py  audio_agent_library.py  config.env.example  crud.py  docker-compose.yml  file_utils.py  flow.yaml  gemini_audio_integration.py  llm.py  llm_service.py  main.py  mcp_audio_server.py  mcp_gemini_client.py  models.py  n8n_workflow_example.json  orchestrator.py  pyproject.toml  requirements.txt  safe_executor.py  start_both.bat  start_both_services.ps1  start_menu.ps1  start_secure.ps1  start_simple.ps1  start_system.ps1  test_simple.ps1  test_system.py  workflows.md
flows/: normalize_and_eq.yaml
mqtt-config/: mosquitto.conf
src/app/: page.tsx
src/components/: chat-interface.tsx
templates/: admin.html  analytics.html  chat.html  clients.html  dashboard.html  login.html  requests.html  settings.html  unauthorized.html
tests/: test_api.py  test_auth_pages.py  test_full_workflow.py  test_llm.py  test_mcp_server.py  test_mqtt_logging.py  test_mqtt_websocket.py  test_orchestrator.py  test_rate_limit.py
waveq-chat-ui/: GEMINI_SETUP.md  README.md  package-lock.json  package.json
waveq-chat-ui/src/app/: layout.tsx  page.tsx
waveq-chat-ui/src/components/: FlowStarter.tsx  audio-converter.tsx  audio-processor.tsx  audio-trimmer.tsx  audio-visualization.tsx  chat-interface.tsx  code-canvas.tsx  language-provider.tsx  uploads-section.tsx
waveq-chat-ui/src/i18n/: i18n.ts
(+11 files in other folders)
